finish cuda bitset

--- a/lonestardist/bc/CMakeLists.txt
+++ b/lonestardist/bc/CMakeLists.txt
@@ -1,5 +1,6 @@
 cuda_add_executable(test_mrbc_map test_mrbc_map.cu
     OPTIONS ${GENCODE} ${CUDA_VERBOSE_PTXAS})
+target_link_libraries(test_mrbc_map galois_gpu)
 
 distApp(bc_level)
 testDistSyncOnlyApp(bc_level rmat15 ${BASEINPUT}/scalefree/rmat15.gr -graphTranspose=${BASEINPUT}/scalefree/rmat15.tgr -singleSource)
