--- a/lonestardist/CMakeLists.txt
+++ b/lonestardist/CMakeLists.txt
@@ -17,7 +17,7 @@ if(ENABLE_HETERO_GALOIS)
   # for debugging
   add_definitions(-D__GALOIS_CUDA_CHECK_ERROR__)
   if(CMAKE_BUILD_TYPE MATCHES "Debug")
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -lineinfo)
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -lineinfo -g -G)
 
     add_definitions(-D__GALOIS_DEBUG_WORKLIST__)
   endif()
